src/parser.output
State 52 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: Translation_Unit

    2 Translation_Unit: External_Declaration
    3                 | Translation_Unit External_Declaration

    4 External_Declaration: Declaration
    5                     | Function_Definition

    6 Function_Definition: Declaration_Specifiers Declarator Compound_Statement

    7 Compound_Statement: T_LCBRACK T_RCBRACK
    8                   | T_LCBRACK Statement_List T_RCBRACK
    9                   | T_LCBRACK Declaration_List T_RCBRACK
   10                   | T_LCBRACK Declaration_List Statement_List T_RCBRACK

   11 Declaration_List: Declaration
   12                 | Declaration_List Declaration

   13 Declaration: Declaration_Specifiers T_SEMICOLON
   14            | Declaration_Specifiers Init_Declarator_List T_SEMICOLON

   15 Statement_List: Statement
   16               | Statement_List Statement

   17 Statement: Compound_Statement
   18          | Selection_Statement
   19          | Iteration_Statement
   20          | Expression_Statement
   21          | Return_Statement

   22 Expression_Statement: Expression T_SEMICOLON

   23 Selection_Statement: T_IF T_LRBRACK Expression T_RRBRACK Statement T_ELSE Statement
   24                    | T_IF T_LRBRACK Expression T_RRBRACK Statement

   25 Iteration_Statement: T_WHILE T_LRBRACK Expression T_RRBRACK Statement

   26 Return_Statement: T_RETURN T_SEMICOLON
   27                 | T_RETURN Expression T_SEMICOLON

   28 Expression: Assignment_Expression

   29 Init_Declarator_List: Init_Declarator

   30 Init_Declarator: Declarator T_EQUAL Initializer
   31                | Declarator

   32 Initializer: Assignment_Expression

   33 Assignment_Expression: Conditional_Expression
   34                      | Unary_Expression Assignment_Operator Assignment_Expression

   35 Assignment_Operator: T_EQUAL

   36 Conditional_Expression: Logical_OR_Expression

   37 Logical_OR_Expression: Logical_AND_Expression
   38                      | Logical_OR_Expression T_OR Logical_AND_Expression

   39 Logical_AND_Expression: Inclusive_OR_Expressoin
   40                       | Logical_AND_Expression T_AND Logical_OR_Expression

   41 Inclusive_OR_Expressoin: Exclusive_OR_Expression

   42 Exclusive_OR_Expression: AND_Expression

   43 AND_Expression: Equality_Expression

   44 Equality_Expression: Relational_Expression
   45                    | Equality_Expression T_EQ Relational_Expression

   46 Relational_Expression: Shift_Expression
   47                      | Relational_Expression T_LTHAN Shift_Expression
   48                      | Relational_Expression T_GTHAN Shift_Expression

   49 Shift_Expression: Additive_Expression

   50 Unary_Expression: Postfix_Expression
   51                 | Unary_Operator Cast_Expression

   52 Unary_Operator: T_BAND
   53               | T_TIMES
   54               | T_PLUS
   55               | T_MINUS

   56 Cast_Expression: Unary_Expression

   57 Multiplicative_Expression: Cast_Expression
   58                          | Multiplicative_Expression T_TIMES Cast_Expression

   59 Additive_Expression: Multiplicative_Expression
   60                    | Additive_Expression T_PLUS Multiplicative_Expression
   61                    | Additive_Expression T_MINUS Multiplicative_Expression

   62 Postfix_Expression: Primary_Expression
   63                   | Postfix_Expression T_LRBRACK T_RRBRACK
   64                   | Postfix_Expression T_LRBRACK Argument_Expression_List T_RRBRACK

   65 Argument_Expression_List: Assignment_Expression
   66                         | Argument_Expression_List T_COMMA Assignment_Expression

   67 Primary_Expression: T_IDENTIFIER
   68                   | T_NUMBER

   69 Declarator: Direct_Declarator

   70 Direct_Declarator: T_IDENTIFIER
   71                  | Direct_Declarator T_LRBRACK T_RRBRACK
   72                  | Direct_Declarator T_LRBRACK Parameter_Type_List T_RRBRACK

   73 Parameter_Type_List: Parameter_List

   74 Parameter_List: Parameter_Declaration
   75               | Parameter_List T_COMMA Parameter_Declaration

   76 Parameter_Declaration: Declaration_Specifiers Declarator

   77 Declaration_Specifiers: Storage_Class_Specifier Declaration_Specifiers
   78                       | Storage_Class_Specifier
   79                       | Type_Specifier Declaration_Specifiers
   80                       | Type_Specifier
   81                       | Type_Qualifier Declaration_Specifiers
   82                       | Type_Qualifier

   83 Storage_Class_Specifier: T_TYPEDEF
   84                        | T_EXTERN
   85                        | T_STATIC
   86                        | T_AUTO
   87                        | T_REGISTER

   88 Type_Specifier: T_VOID
   89               | T_CHAR
   90               | T_SHORT
   91               | T_INT
   92               | T_LONG
   93               | T_FLOAT
   94               | T_DOUBLE
   95               | T_SIGNED
   96               | T_UNSIGNED

   97 Type_Qualifier: T_CONST
   98               | T_VOLATILE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TYPEDEF (258) 83
T_EXTERN (259) 84
T_STATIC (260) 85
T_AUTO (261) 86
T_REGISTER (262) 87
T_VOID (263) 88
T_CHAR (264) 89
T_SHORT (265) 90
T_INT (266) 91
T_LONG (267) 92
T_FLOAT (268) 93
T_DOUBLE (269) 94
T_SIGNED (270) 95
T_UNSIGNED (271) 96
T_CONST (272) 97
T_VOLATILE (273) 98
T_SEMICOLON (274) 13 14 22 26 27
T_EQUAL (275) 30 35
T_LCBRACK (276) 7 8 9 10
T_RCBRACK (277) 7 8 9 10
T_LRBRACK (278) 23 24 25 63 64 71 72
T_RRBRACK (279) 23 24 25 63 64 71 72
T_IDENTIFIER (280) 67 70
T_RETURN (281) 26 27
T_WHILE (282) 25
T_NUMBER (283) 68
T_COMMA (284) 66 75
T_IF (285) 23 24
T_ELSE (286) 23
T_TIMES (287) 53 58
T_PLUS (288) 54 60
T_MINUS (289) 55 61
T_EQ (290) 45
T_OR (291) 38
T_AND (292) 40
T_LTHAN (293) 47
T_GTHAN (294) 48
T_BAND (295) 52


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
ROOT (42)
    on left: 1, on right: 0
Translation_Unit (43)
    on left: 2 3, on right: 1 3
External_Declaration (44)
    on left: 4 5, on right: 2 3
Function_Definition (45)
    on left: 6, on right: 5
Compound_Statement (46)
    on left: 7 8 9 10, on right: 6 17
Declaration_List (47)
    on left: 11 12, on right: 9 10 12
Declaration (48)
    on left: 13 14, on right: 4 11 12
Statement_List (49)
    on left: 15 16, on right: 8 10 16
Statement (50)
    on left: 17 18 19 20 21, on right: 15 16 23 24 25
Expression_Statement (51)
    on left: 22, on right: 20
Selection_Statement (52)
    on left: 23 24, on right: 18
Iteration_Statement (53)
    on left: 25, on right: 19
Return_Statement (54)
    on left: 26 27, on right: 21
Expression (55)
    on left: 28, on right: 22 23 24 25 27
Init_Declarator_List (56)
    on left: 29, on right: 14
Init_Declarator (57)
    on left: 30 31, on right: 29
Initializer (58)
    on left: 32, on right: 30
Assignment_Expression (59)
    on left: 33 34, on right: 28 32 34 65 66
Assignment_Operator (60)
    on left: 35, on right: 34
Conditional_Expression (61)
    on left: 36, on right: 33
Logical_OR_Expression (62)
    on left: 37 38, on right: 36 38 40
Logical_AND_Expression (63)
    on left: 39 40, on right: 37 38 40
Inclusive_OR_Expressoin (64)
    on left: 41, on right: 39
Exclusive_OR_Expression (65)
    on left: 42, on right: 41
AND_Expression (66)
    on left: 43, on right: 42
Equality_Expression (67)
    on left: 44 45, on right: 43 45
Relational_Expression (68)
    on left: 46 47 48, on right: 44 45 47 48
Shift_Expression (69)
    on left: 49, on right: 46 47 48
Unary_Expression (70)
    on left: 50 51, on right: 34 56
Unary_Operator (71)
    on left: 52 53 54 55, on right: 51
Cast_Expression (72)
    on left: 56, on right: 51 57 58
Multiplicative_Expression (73)
    on left: 57 58, on right: 58 59 60 61
Additive_Expression (74)
    on left: 59 60 61, on right: 49 60 61
Postfix_Expression (75)
    on left: 62 63 64, on right: 50 63 64
Argument_Expression_List (76)
    on left: 65 66, on right: 64 66
Primary_Expression (77)
    on left: 67 68, on right: 62
Declarator (78)
    on left: 69, on right: 6 30 31 76
Direct_Declarator (79)
    on left: 70 71 72, on right: 69 71 72
Parameter_Type_List (80)
    on left: 73, on right: 72
Parameter_List (81)
    on left: 74 75, on right: 73 75
Parameter_Declaration (82)
    on left: 76, on right: 74 75
Declaration_Specifiers (83)
    on left: 77 78 79 80 81 82, on right: 6 13 14 76 77 79 81
Storage_Class_Specifier (84)
    on left: 83 84 85 86 87, on right: 77 78
Type_Specifier (85)
    on left: 88 89 90 91 92 93 94 95 96, on right: 79 80
Type_Qualifier (86)
    on left: 97 98, on right: 81 82


State 0

    0 $accept: . ROOT $end

    T_TYPEDEF   shift, and go to state 1
    T_EXTERN    shift, and go to state 2
    T_STATIC    shift, and go to state 3
    T_AUTO      shift, and go to state 4
    T_REGISTER  shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_SHORT     shift, and go to state 8
    T_INT       shift, and go to state 9
    T_LONG      shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_UNSIGNED  shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_VOLATILE  shift, and go to state 16

    ROOT                     go to state 17
    Translation_Unit         go to state 18
    External_Declaration     go to state 19
    Function_Definition      go to state 20
    Declaration              go to state 21
    Declaration_Specifiers   go to state 22
    Storage_Class_Specifier  go to state 23
    Type_Specifier           go to state 24
    Type_Qualifier           go to state 25


State 1

   83 Storage_Class_Specifier: T_TYPEDEF .

    $default  reduce using rule 83 (Storage_Class_Specifier)


State 2

   84 Storage_Class_Specifier: T_EXTERN .

    $default  reduce using rule 84 (Storage_Class_Specifier)


State 3

   85 Storage_Class_Specifier: T_STATIC .

    $default  reduce using rule 85 (Storage_Class_Specifier)


State 4

   86 Storage_Class_Specifier: T_AUTO .

    $default  reduce using rule 86 (Storage_Class_Specifier)


State 5

   87 Storage_Class_Specifier: T_REGISTER .

    $default  reduce using rule 87 (Storage_Class_Specifier)


State 6

   88 Type_Specifier: T_VOID .

    $default  reduce using rule 88 (Type_Specifier)


State 7

   89 Type_Specifier: T_CHAR .

    $default  reduce using rule 89 (Type_Specifier)


State 8

   90 Type_Specifier: T_SHORT .

    $default  reduce using rule 90 (Type_Specifier)


State 9

   91 Type_Specifier: T_INT .

    $default  reduce using rule 91 (Type_Specifier)


State 10

   92 Type_Specifier: T_LONG .

    $default  reduce using rule 92 (Type_Specifier)


State 11

   93 Type_Specifier: T_FLOAT .

    $default  reduce using rule 93 (Type_Specifier)


State 12

   94 Type_Specifier: T_DOUBLE .

    $default  reduce using rule 94 (Type_Specifier)


State 13

   95 Type_Specifier: T_SIGNED .

    $default  reduce using rule 95 (Type_Specifier)


State 14

   96 Type_Specifier: T_UNSIGNED .

    $default  reduce using rule 96 (Type_Specifier)


State 15

   97 Type_Qualifier: T_CONST .

    $default  reduce using rule 97 (Type_Qualifier)


State 16

   98 Type_Qualifier: T_VOLATILE .

    $default  reduce using rule 98 (Type_Qualifier)


State 17

    0 $accept: ROOT . $end

    $end  shift, and go to state 26


State 18

    1 ROOT: Translation_Unit .
    3 Translation_Unit: Translation_Unit . External_Declaration

    T_TYPEDEF   shift, and go to state 1
    T_EXTERN    shift, and go to state 2
    T_STATIC    shift, and go to state 3
    T_AUTO      shift, and go to state 4
    T_REGISTER  shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_SHORT     shift, and go to state 8
    T_INT       shift, and go to state 9
    T_LONG      shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_UNSIGNED  shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_VOLATILE  shift, and go to state 16

    $default  reduce using rule 1 (ROOT)

    External_Declaration     go to state 27
    Function_Definition      go to state 20
    Declaration              go to state 21
    Declaration_Specifiers   go to state 22
    Storage_Class_Specifier  go to state 23
    Type_Specifier           go to state 24
    Type_Qualifier           go to state 25


State 19

    2 Translation_Unit: External_Declaration .

    $default  reduce using rule 2 (Translation_Unit)


State 20

    5 External_Declaration: Function_Definition .

    $default  reduce using rule 5 (External_Declaration)


State 21

    4 External_Declaration: Declaration .

    $default  reduce using rule 4 (External_Declaration)


State 22

    6 Function_Definition: Declaration_Specifiers . Declarator Compound_Statement
   13 Declaration: Declaration_Specifiers . T_SEMICOLON
   14            | Declaration_Specifiers . Init_Declarator_List T_SEMICOLON

    T_SEMICOLON   shift, and go to state 28
    T_IDENTIFIER  shift, and go to state 29

    Init_Declarator_List  go to state 30
    Init_Declarator       go to state 31
    Declarator            go to state 32
    Direct_Declarator     go to state 33


State 23

   77 Declaration_Specifiers: Storage_Class_Specifier . Declaration_Specifiers
   78                       | Storage_Class_Specifier .

    T_TYPEDEF   shift, and go to state 1
    T_EXTERN    shift, and go to state 2
    T_STATIC    shift, and go to state 3
    T_AUTO      shift, and go to state 4
    T_REGISTER  shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_SHORT     shift, and go to state 8
    T_INT       shift, and go to state 9
    T_LONG      shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_UNSIGNED  shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_VOLATILE  shift, and go to state 16

    $default  reduce using rule 78 (Declaration_Specifiers)

    Declaration_Specifiers   go to state 34
    Storage_Class_Specifier  go to state 23
    Type_Specifier           go to state 24
    Type_Qualifier           go to state 25


State 24

   79 Declaration_Specifiers: Type_Specifier . Declaration_Specifiers
   80                       | Type_Specifier .

    T_TYPEDEF   shift, and go to state 1
    T_EXTERN    shift, and go to state 2
    T_STATIC    shift, and go to state 3
    T_AUTO      shift, and go to state 4
    T_REGISTER  shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_SHORT     shift, and go to state 8
    T_INT       shift, and go to state 9
    T_LONG      shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_UNSIGNED  shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_VOLATILE  shift, and go to state 16

    $default  reduce using rule 80 (Declaration_Specifiers)

    Declaration_Specifiers   go to state 35
    Storage_Class_Specifier  go to state 23
    Type_Specifier           go to state 24
    Type_Qualifier           go to state 25


State 25

   81 Declaration_Specifiers: Type_Qualifier . Declaration_Specifiers
   82                       | Type_Qualifier .

    T_TYPEDEF   shift, and go to state 1
    T_EXTERN    shift, and go to state 2
    T_STATIC    shift, and go to state 3
    T_AUTO      shift, and go to state 4
    T_REGISTER  shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_SHORT     shift, and go to state 8
    T_INT       shift, and go to state 9
    T_LONG      shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_UNSIGNED  shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_VOLATILE  shift, and go to state 16

    $default  reduce using rule 82 (Declaration_Specifiers)

    Declaration_Specifiers   go to state 36
    Storage_Class_Specifier  go to state 23
    Type_Specifier           go to state 24
    Type_Qualifier           go to state 25


State 26

    0 $accept: ROOT $end .

    $default  accept


State 27

    3 Translation_Unit: Translation_Unit External_Declaration .

    $default  reduce using rule 3 (Translation_Unit)


State 28

   13 Declaration: Declaration_Specifiers T_SEMICOLON .

    $default  reduce using rule 13 (Declaration)


State 29

   70 Direct_Declarator: T_IDENTIFIER .

    $default  reduce using rule 70 (Direct_Declarator)


State 30

   14 Declaration: Declaration_Specifiers Init_Declarator_List . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 37


State 31

   29 Init_Declarator_List: Init_Declarator .

    $default  reduce using rule 29 (Init_Declarator_List)


State 32

    6 Function_Definition: Declaration_Specifiers Declarator . Compound_Statement
   30 Init_Declarator: Declarator . T_EQUAL Initializer
   31                | Declarator .

    T_EQUAL    shift, and go to state 38
    T_LCBRACK  shift, and go to state 39

    $default  reduce using rule 31 (Init_Declarator)

    Compound_Statement  go to state 40


State 33

   69 Declarator: Direct_Declarator .
   71 Direct_Declarator: Direct_Declarator . T_LRBRACK T_RRBRACK
   72                  | Direct_Declarator . T_LRBRACK Parameter_Type_List T_RRBRACK

    T_LRBRACK  shift, and go to state 41

    $default  reduce using rule 69 (Declarator)


State 34

   77 Declaration_Specifiers: Storage_Class_Specifier Declaration_Specifiers .

    $default  reduce using rule 77 (Declaration_Specifiers)


State 35

   79 Declaration_Specifiers: Type_Specifier Declaration_Specifiers .

    $default  reduce using rule 79 (Declaration_Specifiers)


State 36

   81 Declaration_Specifiers: Type_Qualifier Declaration_Specifiers .

    $default  reduce using rule 81 (Declaration_Specifiers)


State 37

   14 Declaration: Declaration_Specifiers Init_Declarator_List T_SEMICOLON .

    $default  reduce using rule 14 (Declaration)


State 38

   30 Init_Declarator: Declarator T_EQUAL . Initializer

    T_IDENTIFIER  shift, and go to state 42
    T_NUMBER      shift, and go to state 43
    T_TIMES       shift, and go to state 44
    T_PLUS        shift, and go to state 45
    T_MINUS       shift, and go to state 46
    T_BAND        shift, and go to state 47

    Initializer                go to state 48
    Assignment_Expression      go to state 49
    Conditional_Expression     go to state 50
    Logical_OR_Expression      go to state 51
    Logical_AND_Expression     go to state 52
    Inclusive_OR_Expressoin    go to state 53
    Exclusive_OR_Expression    go to state 54
    AND_Expression             go to state 55
    Equality_Expression        go to state 56
    Relational_Expression      go to state 57
    Shift_Expression           go to state 58
    Unary_Expression           go to state 59
    Unary_Operator             go to state 60
    Cast_Expression            go to state 61
    Multiplicative_Expression  go to state 62
    Additive_Expression        go to state 63
    Postfix_Expression         go to state 64
    Primary_Expression         go to state 65


State 39

    7 Compound_Statement: T_LCBRACK . T_RCBRACK
    8                   | T_LCBRACK . Statement_List T_RCBRACK
    9                   | T_LCBRACK . Declaration_List T_RCBRACK
   10                   | T_LCBRACK . Declaration_List Statement_List T_RCBRACK

    T_TYPEDEF     shift, and go to state 1
    T_EXTERN      shift, and go to state 2
    T_STATIC      shift, and go to state 3
    T_AUTO        shift, and go to state 4
    T_REGISTER    shift, and go to state 5
    T_VOID        shift, and go to state 6
    T_CHAR        shift, and go to state 7
    T_SHORT       shift, and go to state 8
    T_INT         shift, and go to state 9
    T_LONG        shift, and go to state 10
    T_FLOAT       shift, and go to state 11
    T_DOUBLE      shift, and go to state 12
    T_SIGNED      shift, and go to state 13
    T_UNSIGNED    shift, and go to state 14
    T_CONST       shift, and go to state 15
    T_VOLATILE    shift, and go to state 16
    T_LCBRACK     shift, and go to state 39
    T_RCBRACK     shift, and go to state 66
    T_IDENTIFIER  shift, and go to state 42
    T_RETURN      shift, and go to state 67
    T_WHILE       shift, and go to state 68
    T_NUMBER      shift, and go to state 43
    T_IF          shift, and go to state 69
    T_TIMES       shift, and go to state 44
    T_PLUS        shift, and go to state 45
    T_MINUS       shift, and go to state 46
    T_BAND        shift, and go to state 47

    Compound_Statement         go to state 70
    Declaration_List           go to state 71
    Declaration                go to state 72
    Statement_List             go to state 73
    Statement                  go to state 74
    Expression_Statement       go to state 75
    Selection_Statement        go to state 76
    Iteration_Statement        go to state 77
    Return_Statement           go to state 78
    Expression                 go to state 79
    Assignment_Expression      go to state 80
    Conditional_Expression     go to state 50
    Logical_OR_Expression      go to state 51
    Logical_AND_Expression     go to state 52
    Inclusive_OR_Expressoin    go to state 53
    Exclusive_OR_Expression    go to state 54
    AND_Expression             go to state 55
    Equality_Expression        go to state 56
    Relational_Expression      go to state 57
    Shift_Expression           go to state 58
    Unary_Expression           go to state 59
    Unary_Operator             go to state 60
    Cast_Expression            go to state 61
    Multiplicative_Expression  go to state 62
    Additive_Expression        go to state 63
    Postfix_Expression         go to state 64
    Primary_Expression         go to state 65
    Declaration_Specifiers     go to state 81
    Storage_Class_Specifier    go to state 23
    Type_Specifier             go to state 24
    Type_Qualifier             go to state 25


State 40

    6 Function_Definition: Declaration_Specifiers Declarator Compound_Statement .

    $default  reduce using rule 6 (Function_Definition)


State 41

   71 Direct_Declarator: Direct_Declarator T_LRBRACK . T_RRBRACK
   72                  | Direct_Declarator T_LRBRACK . Parameter_Type_List T_RRBRACK

    T_TYPEDEF   shift, and go to state 1
    T_EXTERN    shift, and go to state 2
    T_STATIC    shift, and go to state 3
    T_AUTO      shift, and go to state 4
    T_REGISTER  shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_SHORT     shift, and go to state 8
    T_INT       shift, and go to state 9
    T_LONG      shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_UNSIGNED  shift, and go to state 14
    T_CONST     shift, and go to state 15
    T_VOLATILE  shift, and go to state 16
    T_RRBRACK   shift, and go to state 82
